--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.glow {
+    text-shadow: 2px 2px 4px #00ff00;
+}
+
+.pixel-button {
+  color: black;
+  border: 3px solid black;
+  box-shadow: 3px 3px 0px black;
+  transition: all 0.2s ease;
+}
+
+.pixel-button:hover {
+  background-color: #ffaa00;
+}
+
+.pixel-button:active {
+  box-shadow: none;
+  transform: translateY(3px);
+}
+
+.retro-container {
+  background-color: black;
+  color: green;
+}
